--- a/doc/paper/nips2014.tex
+++ b/doc/paper/nips2014.tex
@@ -7,7 +7,6 @@
 
 \title{Implementing Dimensionality Reduction in Apache Flink using the Lanczos Algorithm}
 
-
 \author{
 Nik Hille \\
 \texttt{nik.hille@campus.tu-berlin.de} \\
@@ -31,14 +30,33 @@ Fridtjof Sander \\
 
 \begin{document}
 
+\begin{center}
+\textbf{Advanced Information Management III Scalable Data - Analytics and Data Mining}
+\end{center}
+
+\vspace{0.8cm}
 
 \maketitle
 
+\vspace{0.8cm}
+
+
 \begin{abstract}
 
+We made some total crap.
 \end{abstract}
 
+\vfill
+
+\begin{center}
+\today
+\end{center}
+
+\pagebreak
+
 \section{Introduction}
+
+sdkjnasdknsjdknas  jknsdkjnasd kjasdkjnasdkjnasd jknasd
 
 \section{Problem Statement}
 
