--- a/doc/paper/nips2014.tex
+++ b/doc/paper/nips2014.tex
@@ -40,12 +40,6 @@ Fridtjof Sander \\
 
 \vspace{0.8cm}
 
-
-\begin{abstract}
-
-We made some total crap.
-\end{abstract}
-
 \vfill
 
 \begin{center}
@@ -54,38 +48,33 @@ We made some total crap.
 
 \pagebreak
 
-\section{Introduction}
+\input{introduction}
 
-sdkjnasdknsjdknas  jknsdkjnasd kjasdkjnasdkjnasd jknasd
+\input{problem}
 
-\section{Problem Statement}
+\input{lanczos}
 
-\section{The Lanczos Algorithm}
+\input{approaches}
 
-\section{Approaches}
+\input{implementations}
 
-\section{Implementations}
+\input{results}
 
-\section{Results}
+\input{conclusion}
 
-\section{Conclusion}
+\input{references}
 
 
-\subsubsection*{References}
-\small{
-[1] Alexander, J.A. \& Mozer, M.C. (1995) Template-based algorithms
-for connectionist rule extraction. In G. Tesauro, D. S. Touretzky
-and T.K. Leen (eds.), {\it Advances in Neural Information Processing
-Systems 7}, pp. 609-616. Cambridge, MA: MIT Press.
 
-[2] Bower, J.M. \& Beeman, D. (1995) {\it The Book of GENESIS: Exploring
-Realistic Neural Models with the GEneral NEural SImulation System.}
-New York: TELOS/Springer-Verlag.
 
-[3] Hasselmo, M.E., Schnell, E. \& Barkai, E. (1995) Dynamics of learning
-and recall at excitatory recurrent synapses and cholinergic modulation
-in rat hippocampal region CA3. {\it Journal of Neuroscience}
-{\bf 15}(7):5249-5262.
-}
+
+
+
+
+
+
+
+
+
 
 \end{document}
