Added package imports and some setup for graphics and captions

--- a/doc/paper/nips2014.tex
+++ b/doc/paper/nips2014.tex
@@ -1,6 +1,8 @@
 \documentclass{article} % For LaTeX2e
 \usepackage{nips14submit_e,times}
 \usepackage{hyperref}
+\usepackage{graphicx}
+\usepackage{caption}
 \usepackage{url}
 %\documentstyle[nips14submit_09,times,art10]{article} % For LaTeX 2.09
 
@@ -27,6 +29,8 @@ Fridtjof Sander \\
 \newcommand{\new}{\marginpar{NEW}}
 
 \nipsfinalcopy % Uncomment for camera-ready version
+
+\captionsetup{justification=centering,width=0.9\textwidth} % Center captions and set width to 90%
 
 \begin{document}
 
