Added notes to the Implementations section

--- a/doc/paper/implementations.tex
+++ b/doc/paper/implementations.tex
@@ -1,1 +1,5 @@
 \section{Implementations}
+
+% Don't draw any conclusions!
+% - E.g. stop after saying that the "nested iterations" exception came up!
+% - Conclusions belong to the Results/Conclusion sections
