--- a/doc/paper/approaches.tex
+++ b/doc/paper/approaches.tex
@@ -8,13 +8,10 @@ Mahout's implementation of the Lanczos algorithm for the Hadoop framework. The t
 possibility we found is to still implement the actual algorithm manually in Flink, but
 without using delta iterations to model the algorithm's iterative nature.
 
-\subsection{Using Flink Delta Iterations}
+% Approach: Delta Iterations
+% ==========================
 
-% Delta Iterations
-% - Why DELTA iterations?
-%    --> Briefly explain delta iterations
-%    --> Current iteration has small input that results from previous iteration (= work set)
-%    --> Result of every iteration is appended to final result (= result set)
+\subsection{Using Flink Delta Iterations}
 
 While planning the implementation part of our project, we consulted both the official
 Flink 0.8 documentation [1] as well as the Flink community directly (mainly through
@@ -24,10 +21,8 @@ pointed to was to take advantage of Flink's delta iteration capabilities. But wh
 exactly are delta iterations, how do they compare to standard Flink iterations and why 
 would we choose the former over the latter?
 
-% - Flink provides an iteration operator specifically for the purpose of implementing iterative algorithm
-%    --> Idiomatic way
-%    --> Two variants: Iterate + Delta Iterate
-%        --> For both: Define step function that will be invoked repeatedly until termination condition is reached
+% General Description of Flink's Iterations
+% -----------------------------------------
 
 Flink provides an iteration operator specifically for the purpose of implementing
 iterative algorithms, as these kinds of algorithms occur in many domains of data
@@ -40,10 +35,8 @@ standard iteration) and \textbf{Delta Iterate}. The general idea of both of thes
 is that the programmer defines a step function that will be invoked repeatedly on the
 current state of the data until a specified termination condition is reached. [1]
 
-%        --> Iterate:
-%            - For simple iterations
-%            - Step function takes entire input and computes next version of partial solution
-%            - Final result = partial solution of the last iteration
+% Iterate Operator
+% ----------------
 
 % TODO: Are we allowed to use images from the Flink documentation?
 \begin{figure}[h]
@@ -61,15 +54,8 @@ is the initial data set specified by the programmer (1), every step that follows
 partial solution produced by the preceding step. The Iterate operator's final result is simply 
 the partial solution produced by the very last step (4). [1]
 
-%        --> Delta Iterate:
-%            - Specifically designed for incremental iterations (= iterations that only modify small parts
-%              of their solution in every iteration and by that evolve the solution instead of fully recomputing it
-%              in every iteration)
-%                --> More effective, because each iteration operates only on small subset of data
-%            - Each step...
-%                ...takes current work set and produces new work set
-%                ...updates part of the solution set
-%            - Final result = solution set after last iteration
+% Delta Iterate Operator
+% ----------------------
 
 \begin{figure}[h]
 	\centering
@@ -93,11 +79,8 @@ state of the solution set as its input and produces a new work set while also (o
 updating the contents of the solution set (3). The final result of a delta iteration is
 contained in the solution set after the last iteration step has terminated (4). [1]
 
-% - In every iteration of Lanczos algorithm...
-%     ...only parts of the result of previous iteration are needed
-%     ...only small parts are added to the final result
-%     ...no existing parts of final result are modified
-% ==> This matches intention of delta iterations perfectly
+% Conclusion: Why DELTA iterations for Lanczos?
+% ---------------------------------------------
 
 As described in section \ref{sec:lanczos}, every iteration of the Lanczos algorithm only needs
 (parts of) the result of the preceding iteration. Also, during every iteration, the final result
@@ -108,12 +91,10 @@ algorithm in Flink.
 
 \subsection{Using Mahout's Lanczos Solver for Hadoop}
 
-\subsection{Implementing an Iterative, Loop-based Construction}
-
-% Mahout
 % - Idea: Implement interface that Mahout's LanczosSolver uses 
 %    --> don't actually implement lanczos in flink
 
-% Iterative loop-based
-%    --> Flink API/Optimizer doesn't know about iteration
-%    --> Briefly explain Flink execution strategy/graph (Optimizer)
+\subsection{Implementing an Iterative, Loop-based Construction}
+
+% --> Flink API/Optimizer doesn't know about iteration
+% --> Briefly explain Flink execution strategy/graph (Optimizer)
