References: Added Mahout documentation + git repo

--- a/doc/paper/references.tex
+++ b/doc/paper/references.tex
@@ -4,4 +4,12 @@
 \small{
 [1] The Apache Software Foundation: {\it Apache Flink 0.8 Documentation}. 
 \url{https://flink.apache.org/docs/0.8/iterations.html}. (Fetched on \today).
+
+[2] The Apache Software Foundation: Support for Dimensional Reduction. In
+{\it Apache Mahout Documentation}.
+\url{https://mahout.apache.org/users/dim-reduction/dimensional-reduction.html}.
+(Fetched on \today).
+
+[3] The Apache Software Foundation: Apache Mahout Source Code Repository.
+\url{https://github.com/apache/mahout}. (Fetched on \today).
 }
