Fixed typo; Removed test stuff

--- a/doc/paper/approaches.tex
+++ b/doc/paper/approaches.tex
@@ -96,8 +96,8 @@ algorithm in Flink.
 
 \subsection{Using Mahout's Implementation of the Lanczos Algorithm}
 
-During the research phase of our project, we studied (amonst others) the documentation [2] and
-the source code [3] of the Apache Mahout machine learning library. It quickly came to our
+During the research phase of our project, we studied (amongst others) the documentation [2]
+and the source code [3] of the Apache Mahout machine learning library. It quickly came to our
 attention that Mahout contains a full SVD implementation using the Lanczos algorithm. The
 algorithm itself is implemented in the \texttt{LanczosSolver} class in Mahout's \texttt{math}
 package. At first we only studied this implementation in order to learn more about the way the
@@ -118,8 +118,6 @@ whole algorithm ourselves could potentially be spent on getting things up and ru
 quickly and on improving other parts of the system.
 
 \subsection{Implementing an Iterative, Loop-based Construction}
-
-asd test lol
 
 % --> Flink API/Optimizer doesn't know about iteration
 % --> Briefly explain Flink execution strategy/graph (Optimizer)
