--- a/doc/paper/references.tex
+++ b/doc/paper/references.tex
@@ -12,4 +12,8 @@
 
 [3] The Apache Software Foundation: Apache Mahout Source Code Repository.
 \url{https://github.com/apache/mahout}. (Fetched on \today).
+
+[4] Kostas Tzoumas: {\it Apache Flink Internals}. Presentation at the Apache
+Flink meetup Berlin on November 18, 2014.
+\url{http://de.slideshare.net/KostasTzoumas/flink-internals}. (Fetched on \today).
 }
