--- a/doc/paper/approaches.tex
+++ b/doc/paper/approaches.tex
@@ -118,26 +118,42 @@ algorithm's actual implementation. Also, the efforts that would be saved by not 
 whole algorithm ourselves could potentially be spent on getting things up and running more
 quickly and on improving other parts of the system.
 
-\subsection{Implementing an Iterative, Loop-based Construction}
 
-% - Had previously never been exposed to delta iterations (described in <REF>) in practice
-%     --> Most intuitive approach for us (and first one that came to our minds):
-%         - Model data flow the way that we were used to from previous exercises
-%         - Don't use Flink constructs to model iteration, but instead use ordinary Java loops
-%             --> 'global' data sets for final results (and for intermediate results needed in
-%                 following iterations) and local data sets for data temporarily needed in a
-%                 single iteration
-%             --> In each iteration, append stuff manually to 'global' data sets
+% Loop-Based Approach
+% ===================
 
-% - Brief explanation of a Flink program's execution flow, because important to understand
-%   the potential downsides of this approach:
-%     - Flink program is not executed directly
-%     - Instead, Flink compiles program to execution plan that's optimized by the Flink optimizer
-%         --> Then executes that plan
-%         --> Execution plan is basically a graph representing the program's whole data flow
-%     --> Potential problem with this approach: Flink compiler/optimizer doesn't know about the iteration
-%         --> Cannot optimize it
-%             --> Our expectation: This approach doesn't bring best performance possible
+\subsection{Loop-Based implementation}
 
+The approach that actually came to our minds first was to implement the Lanczos algorithm in a
+loop-based fashion, modeling data flow effectively the same way you would model it when
+implementing a non-iterative algorithm in Flink. As we had previously never been exposed to
+Flink's delta iterations in practice, modeling data flow the way we were used to from previous
+exercises was the most intuitive approach for us.
 
+In this approach, the algorithm's iterative nature is not modeled by leveraging Flink's special
+iteration constructs, but by using ordinary Java loops instead. Rather than letting Flink's
+internals deal with work set and solution set (see \ref{ssec:delta_iterations}), we figured we
+could manually manage the various data sets needed for the final results, for intermediate
+results that are needed in the next iteration as well as for temporary data that is only needed
+'locally' within a single iteration.
+
+% Brief explanation of Flink execution flow
+% -----------------------------------------
+
+In order to understand the potential downsides of this approach, a basic understanding of how
+Flink programs are executed is necessary. When running a Flink program, that program is not
+executed directly\footnote{Of course, the bytecode that results from compiling said Flink
+program is executed directly, however Flink doesn't execute the data flow specified by the
+program immediately.}. Instead, Flink compiles the program to an execution plan, which is then
+executed [4]. Before executing said plan, which is basically a graph representing the program's
+whole data flow, Flink tries to optimize it for speed and/or storage performance.
+
+% Impact of Flink execution flow on loop-based approach
+% -----------------------------------------------------
+
+Now the main potential problem with the loop-based approach is that Flink doesn't really know
+about the iterative nature of the implemented algorithm and that the program can thus not be
+optimized completely by Flink. Taking that into consideration, we expected this approach (while
+certainly being possible) to implicate performance loss of some kind compared to the delta
+iteration approach described in section \ref{ssec:delta_iterations}.
 
