--- a/doc/paper/nips2014.tex
+++ b/doc/paper/nips2014.tex
@@ -4,6 +4,18 @@
 \usepackage{graphicx}
 \usepackage{caption}
 \usepackage{url}
+\usepackage{tikz}
+\tikzset{add reference/.style={insert path={%
+    coordinate [pos=0,xshift=-0.5\pgflinewidth,yshift=-0.5\pgflinewidth] (#1 south west) 
+    coordinate [pos=1,xshift=0.5\pgflinewidth,yshift=0.5\pgflinewidth]   (#1 north east)
+    coordinate [pos=.5] (#1 center)                        
+    (#1 south west |- #1 north east)     coordinate (#1 north west)
+    (#1 center     |- #1 north east)     coordinate (#1 north)
+    (#1 center     |- #1 south west)     coordinate (#1 south)
+    (#1 south west -| #1 north east)     coordinate (#1 south east)
+    (#1 center     -| #1 south west)     coordinate (#1 west)
+    (#1 center     -| #1 north east)     coordinate (#1 east)   
+}}} 
 %\documentstyle[nips14submit_09,times,art10]{article} % For LaTeX 2.09
 
 
